<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="450dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/configure" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:text="@string/configure_instance" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/radioButtonEarth"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16sp"
                    android:text="@string/earthInstance" />

                <RadioButton
                    android:id="@+id/radioButtonMars"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16sp"
                    android:text="@string/marsInstance" />

            </RadioGroup>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchIndicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:text="@string/configure_indicator"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="#FF676767"
                android:textSize="14sp"
                android:lineHeight="18sp"
                android:text="@string/configure_indicator_explanation" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/save"
                style="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
